# prof_radio_mind

./: .env.example  .env.hetzner  .env.production.example  .gitignore  .snyk  Dockerfile  README.md  alembic.ini  docker-compose.hetzner.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  semgrep.yml  sentry-release.yml  snyk.yml
.semgrep/: rules.yml
app/: main.py
app/application/: seeder.py
app/core/: admin_auth.py  auth.py  logging_config.py  rate_limiter.py  settings.py
app/static/: index.html
app/tools/: diagnose_sources.py  dry_run_bbc_radio1.py  dry_run_capital.py  dry_run_capital_ukradiolive.py  dry_run_heart_fm.py  dry_run_kiis1027.py  dry_run_kiis_iheart_web.py  dry_run_kiisfm_radio_australia.py  dry_run_nova969.py  dry_run_nova_radio_australia.py  dry_run_nova_radoxo.py  prune_raw_payloads.py
config/loki/: loki-config.yml
config/promtail/: promtail-config.yml
docs/: AGENT_TASKS.md  ANTIGRAVITY_HANDOFF.md  CONFIGURATION.md  FUTURE_PLAYLIST_AUTOMATION.md  FUTURE_PROOF_OF_PLAY.md  HETZNER_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  VALIDATION_REGISTER.md
docs/adr/: 0001-mvp-architecture.md
docs/deployment/: hetzner-deployment-runbook.md  production-checklist.md
docs/passes/: AG-ADOPT-REF0-claude-branch-adoption.md  AG-ADOPT-REF0-task.md  AG-DEPLOY-REF0-production-deploy.md  AG-DEPLOY-REF0-task.md  AUDIO-FINGERPRINTING-OPTIONS.md  CAP-3A-production-collector-readiness-audit.md  CAP-3A-task.md  CAP-3B-capital-one-shot-production-dry-run.md  CAP-3B-task.md  CAP-4-capital-monitored-canary-enable.md  CAP-4-task.md  CAP-UK-0-capital-fm-uk-amendment-plan.md  CAP-UK-0-task.md  COMPLIANCE-AND-RETENTION-GUARDRAILS.md  DATA-VERIFY-1-production-seed-verification.md  DEPLOY-UIUX-METADATA-AG1-production-deploy.md  DEPLOY-UIUX-METADATA-AG1-task.md  DNS-0-cloudflare-dns-plan.md  DNS-0-task.md  HETZ-0-task.md  (+56 more)
migrations/: env.py
nginx/: rmias.conf
scripts/: dry_run_capital.py  enrich_catalog.py  lint.sh  rollback-capital.sh  sast.sh
tests/: conftest.py
(+226 files in other folders)
